# Simple-Todo-API-Rust

./: Cargo.toml  Rocket.toml
src/: main.rs
src/db/: mem_db.rs
src/models/: task.rs
src/routes/: tasks.rs
src/views/: views.rs
templates/: base.html.tera  index.html.tera  todo.html.tera
